force-app/main/default/objects/CRADA__c/CRADA__c.object-meta.xml
<CustomObject>
    <label>CRADA</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>CRADA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRADA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>