force-app/main/default/objects/CRADA__c/fields/Agreement_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Term_Months__c</fullName>
    <label>Agreement Term (Months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>