force-app/main/default/objects/CRADA__c/fields/Amendment_Number__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Number__c</fullName>
    <label>Amendment Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>