force-app/main/default/objects/CRADA__c/fields/Animal_Research_Required__c.field-meta.xml
<CustomField>
    <fullName>Animal_Research_Required__c</fullName>
    <label>Animal Research Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>