force-app/main/default/objects/CRADA__c/fields/Appendix_B_Field_Use__c.field-meta.xml
<CustomField>
    <fullName>Appendix_B_Field_Use__c</fullName>
    <label>Appendix B: Field Use</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>