force-app/main/default/objects/CRADA__c/fields/Appendix_C_Software_Format_Description__c.field-meta.xml
<CustomField>
    <fullName>Appendix_C_Software_Format_Description__c</fullName>
    <label>Appendix C: Software Format Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>