force-app/main/default/objects/CRADA__c/fields/Appendix_D_Participant_Background_IP__c.field-meta.xml
<CustomField>
    <fullName>Appendix_D_Participant_Background_IP__c</fullName>
    <label>Appendix D: Participant Background IP</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>