force-app/main/default/objects/CRADA__c/fields/Appendix_E_Competitiveness_Worksheet__c.field-meta.xml
<CustomField>
    <fullName>Appendix_E_Competitiveness_Worksheet__c</fullName>
    <label>Appendix E: Competitiveness Worksheet</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>