force-app/main/default/objects/CRADA__c/fields/Contract_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Contract_Specialist__c</fullName>
    <label>Contract Specialist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>