force-app/main/default/objects/CRADA__c/fields/CRADA_Contracts_Manager__c.field-meta.xml
<CustomField>
    <fullName>CRADA_Contracts_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRADA Contracts Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.CRADA_Contract_Specialist__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>CRADA8</relationshipName>
    <type>Lookup</type>
</CustomField>