force-app/main/default/objects/CRADA__c/fields/CRADA_Specialist__c.field-meta.xml
<CustomField>
    <fullName>CRADA_Specialist__c</fullName>
    <label>CRADA Specialist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monica Chavez</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>