force-app/main/default/objects/CRADA__c/fields/CRADA_Status__c.field-meta.xml
<CustomField>
    <fullName>CRADA_Status__c</fullName>
    <label>CRADA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposal Draft</fullName>
                <default>true</default>
                <label>Proposal Draft</label>
            </value>
            <value>
                <fullName>Proposal Preparation</fullName>
            </value>
            <value>
                <fullName>Proposal Submitted</fullName>
            </value>
            <value>
                <fullName>Proposal Pending</fullName>
            </value>
            <value>
                <fullName>Proposal Approved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <isActive>false</isActive>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Draft</fullName>
                <isActive>false</isActive>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>