force-app/main/default/objects/CRADA__c/fields/CRADA_Title__c.field-meta.xml
<CustomField>
    <fullName>CRADA_Title__c</fullName>
    <label>CRADA Title</label>
    <type>TextArea</type>
</CustomField>