force-app/main/default/objects/CRADA__c/fields/DOE_IP_Approver__c.field-meta.xml
<CustomField>
    <fullName>DOE_IP_Approver__c</fullName>
    <label>DOE IP Approver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>