force-app/main/default/objects/CRADA__c/fields/Foreign__c.field-meta.xml
<CustomField>
    <fullName>Foreign__c</fullName>
    <label>Foreign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>