force-app/main/default/objects/CRADA__c/fields/Funding_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Funding_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Agreement</label>
    <referenceTo>Funding_Agreement__c</referenceTo>
    <relationshipLabel>CRADA</relationshipLabel>
    <relationshipName>CRADA</relationshipName>
    <type>Lookup</type>
</CustomField>