force-app/main/default/objects/CRADA__c/fields/Is_Appendix_C_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Is_Appendix_C_Applicable__c</fullName>
    <label>Is Appendix C Applicable?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>