force-app/main/default/objects/CRADA__c/fields/Market_Sector__c.field-meta.xml
<CustomField>
    <fullName>Market_Sector__c</fullName>
    <formula>TEXT(Proposal__r.Contract_Client__r.Market_Sector_Title__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Sector</label>
    <type>Text</type>
</CustomField>