force-app/main/default/objects/CRADA__c/fields/MSW__c.field-meta.xml
<CustomField>
    <fullName>MSW__c</fullName>
    <label>MSW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>