force-app/main/default/objects/CRADA__c/fields/MSW_CRADA__c.field-meta.xml
<CustomField>
    <fullName>MSW_CRADA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSW CRADA</label>
    <referenceTo>CRADA__c</referenceTo>
    <relationshipLabel>MSW Child Records</relationshipLabel>
    <relationshipName>CRADA</relationshipName>
    <type>Lookup</type>
</CustomField>