force-app/main/default/objects/CRADA__c/fields/Participants__c.field-meta.xml
<CustomField>
    <fullName>Participants__c</fullName>
    <inlineHelpText>Please enter Participant&apos;s Name and contact information on seperate lines</inlineHelpText>
    <label>Participants</label>
    <type>TextArea</type>
</CustomField>