force-app/main/default/objects/CRADA__c/fields/PNSO_Contracting_Officer__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Contracting_Officer__c</fullName>
    <label>PNSO Contracting Officer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>