force-app/main/default/objects/CRADA__c/fields/PNSO_Coordinator_Foreign_Approver__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Coordinator_Foreign_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PNSO Coordinator - Foreign Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.PNSO_Coordinator_Foreign_Approver__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>CRADAKnvG</relationshipName>
    <type>Lookup</type>
</CustomField>