force-app/main/default/objects/CRADA__c/fields/PNSO_CRADA_Coordinator2__c.field-meta.xml
<CustomField>
    <fullName>PNSO_CRADA_Coordinator2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PNSO CRADA Coordinator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.PNSO_CRADA_Coordinator__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>CRADA5</relationshipName>
    <type>Lookup</type>
</CustomField>