force-app/main/default/objects/CRADA__c/fields/PNSO_CRADA_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>PNSO_CRADA_Coordinator__c</fullName>
    <label>PNSO CRADA Coordinator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>