force-app/main/default/objects/CRADA__c/fields/Primary_Taxonomy__c.field-meta.xml
<CustomField>
    <fullName>Primary_Taxonomy__c</fullName>
    <label>Primary Taxonomy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Computation</fullName>
            </value>
            <value>
                <fullName>Advanced Materials</fullName>
            </value>
            <value>
                <fullName>Bioscience Applications</fullName>
            </value>
            <value>
                <fullName>Carbon Fuels</fullName>
            </value>
            <value>
                <fullName>Chemical Science (non-nuclear)</fullName>
            </value>
            <value>
                <fullName>Earth and Environmental</fullName>
            </value>
            <value>
                <fullName>Energy Efficiency</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>National Security</fullName>
            </value>
            <value>
                <fullName>Nuclear</fullName>
            </value>
            <value>
                <fullName>Physics Applications</fullName>
            </value>
            <value>
                <fullName>Power Distribution</fullName>
            </value>
            <value>
                <fullName>Renewable Power</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>