force-app/main/default/objects/CRADA__c/fields/Principal_Investigator__c.field-meta.xml
<CustomField>
    <fullName>Principal_Investigator__c</fullName>
    <label>Principal Investigator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>