force-app/main/default/objects/CRADA__c/fields/Program_Secretarial_Office__c.field-meta.xml
<CustomField>
    <fullName>Program_Secretarial_Office__c</fullName>
    <label>Program Secretarial Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AR - Advanced Research Projects Agency – Energy</fullName>
            </value>
            <value>
                <fullName>CF - Office of the Chief Financial Officer</fullName>
            </value>
            <value>
                <fullName>CI - Office of Congressional and Intergovernmental Affairs</fullName>
            </value>
            <value>
                <fullName>ED - Office of Economic Impact and Diversity</fullName>
            </value>
            <value>
                <fullName>EE - Assistant Secretary for Efficiency and Renewable Energy</fullName>
            </value>
            <value>
                <fullName>EI - Energy Information Administration</fullName>
            </value>
            <value>
                <fullName>EM - Assistant Secretary for Environmental Management</fullName>
            </value>
            <value>
                <fullName>ET - Office of Energy and Threat</fullName>
            </value>
            <value>
                <fullName>FE - Assistant Secretary for Fossil Energy</fullName>
            </value>
            <value>
                <fullName>LM - Office of Legacy Management</fullName>
            </value>
            <value>
                <fullName>LP - Loan Programs Office</fullName>
            </value>
            <value>
                <fullName>MA - Office of Management</fullName>
            </value>
            <value>
                <fullName>NA - Administrator for National Nuclear Security Administration</fullName>
            </value>
            <value>
                <fullName>NE - Assistant Secretary for Nuclear Energy</fullName>
            </value>
            <value>
                <fullName>OE - Office of Electricity Delivery and Energy Reliability</fullName>
            </value>
            <value>
                <fullName>PA - Office of Public Affairs</fullName>
            </value>
            <value>
                <fullName>PI - Assistant Secretary for Policy and International Affairs</fullName>
            </value>
            <value>
                <fullName>RC - Federal Energy Regulatory Commission</fullName>
            </value>
            <value>
                <fullName>SC - Office of Science</fullName>
            </value>
            <value>
                <fullName>SE - Southeastern Power Administration</fullName>
            </value>
            <value>
                <fullName>SW - Southwestern Power Administration</fullName>
            </value>
            <value>
                <fullName>WA - Western Area Power Administration</fullName>
            </value>
            <value>
                <fullName>GC - Office of the General Counsel</fullName>
            </value>
            <value>
                <fullName>HC - Office of Human Capital Management</fullName>
            </value>
            <value>
                <fullName>HG - Office of Hearings and Appeals</fullName>
            </value>
            <value>
                <fullName>HS - Office of Health, Safety, and Security</fullName>
            </value>
            <value>
                <fullName>IE - Office of Indian Energy Policy &amp; Programs</fullName>
            </value>
            <value>
                <fullName>IG - Office of Inspector General</fullName>
            </value>
            <value>
                <fullName>IM - Office of the Chief Information Officer</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>