force-app/main/default/objects/CRADA__c/fields/Project_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Project_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CRADA</relationshipName>
    <type>Lookup</type>
</CustomField>