force-app/main/default/objects/CRADA__c/fields/Project_Management_Office__c.field-meta.xml
<CustomField>
    <fullName>Project_Management_Office__c</fullName>
    <label>Project Management Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>