force-app/main/default/objects/CRADA__c/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Number</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>CRADA</relationshipLabel>
    <relationshipName>CRADA</relationshipName>
    <type>Lookup</type>
</CustomField>