force-app/main/default/objects/CRADA__c/fields/ProjectTitle__c.field-meta.xml
<CustomField>
    <fullName>ProjectTitle__c</fullName>
    <label>Project Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>