force-app/main/default/objects/CRADA__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal #</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CRADA</relationshipLabel>
    <relationshipName>CRADA</relationshipName>
    <type>Lookup</type>
</CustomField>