force-app/main/default/objects/CRADA__c/fields/Proposal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Stage__c</fullName>
    <formula>TEXT(Proposal__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal Stage</label>
    <type>Text</type>
</CustomField>