force-app/main/default/objects/CRADA__c/fields/PSO_Contact__c.field-meta.xml
<CustomField>
    <fullName>PSO_Contact__c</fullName>
    <label>PSO Contact</label>
    <length>25</length>
    <type>Text</type>
</CustomField>