force-app/main/default/objects/CRADA__c/fields/Scope_Class__c.field-meta.xml
<CustomField>
    <fullName>Scope_Class__c</fullName>
    <formula>Project_Number__r.Opportunity__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scope Class</label>
    <type>Text</type>
</CustomField>