force-app/main/default/objects/CRADA__c/fields/Secondary_Taxonomy__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Taxonomy__c</fullName>
    <label>Secondary Taxonomy</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Taxonomy__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3D Scanning/Imaging</fullName>
            </value>
            <value>
                <fullName>Accelerators</fullName>
            </value>
            <value>
                <fullName>Additive and Precise Manufacturing</fullName>
            </value>
            <value>
                <fullName>Aerodynamics</fullName>
            </value>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Agricultural</fullName>
            </value>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Artificial Intelligence</fullName>
            </value>
            <value>
                <fullName>Atmosphere/Climate</fullName>
            </value>
            <value>
                <fullName>Batteries</fullName>
            </value>
            <value>
                <fullName>Biodefense</fullName>
            </value>
            <value>
                <fullName>BiofueIs - liquid</fullName>
            </value>
            <value>
                <fullName>Biofuel Performance</fullName>
            </value>
            <value>
                <fullName>Biofuels - gaseous</fullName>
            </value>
            <value>
                <fullName>Biology Proteomics</fullName>
            </value>
            <value>
                <fullName>Biomarkers</fullName>
            </value>
            <value>
                <fullName>Biomedical Instrumentation</fullName>
            </value>
            <value>
                <fullName>Biomimetics</fullName>
            </value>
            <value>
                <fullName>Biopower</fullName>
            </value>
            <value>
                <fullName>Buildings</fullName>
            </value>
            <value>
                <fullName>Carbon Capture and Storage</fullName>
            </value>
            <value>
                <fullName>Carbon Capture and Utilization</fullName>
            </value>
            <value>
                <fullName>Catalysts</fullName>
            </value>
            <value>
                <fullName>Chemical Imaging</fullName>
            </value>
            <value>
                <fullName>Chemical Processes</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>Cloud Provisioning Workflows</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Coatings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>