force-app/main/default/objects/CRADA__c/fields/Short_Form__c.field-meta.xml
<CustomField>
    <fullName>Short_Form__c</fullName>
    <label>Short Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>