force-app/main/default/objects/CRADA__c/recordTypes/CRADA.recordType-meta.xml
<RecordType>
    <fullName>CRADA</fullName>
    <active>true</active>
    <label>CRADA</label>
</RecordType>