force-app/main/default/objects/CRADA__c/recordTypes/MSW_CRADA.recordType-meta.xml
<RecordType>
    <fullName>MSW_CRADA</fullName>
    <active>true</active>
    <description>Use this record type to create a Master Scope of Work CRADA record</description>
    <label>MSW CRADA</label>
</RecordType>