force-app/main/default/objects/CRADA__c/validationRules/Foreign_Sponsor_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Foreign_Sponsor_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND( ISPICKVAL(  Foreign__c  , &apos;Yes&apos; ), ISBLANK( PNSO_Coordinator_Foreign_Approver__c )), true, false )</errorConditionFormula>
    <errorMessage>Please select an approver for PNSO Coordinator- Foreign Sponsor</errorMessage>
</ValidationRule>